--- a/Resources/TestData.resx
+++ b/Resources/TestData.resx
@@ -1,1 +1,53 @@
+<?xml version="1.0" encoding="utf-8"?>
+<root>
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+              xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
+
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms</value>
+  </resheader>
+
+  <!-- Invoice 1 Test Data -->
+  <data name="Invoice_URL" xml:space="preserve">
+    <value>https://ocrdemo.com/invoice1.png</value>
+  </data>
+  <data name="Invoice_No" xml:space="preserve">
+    <value>INV-12345</value>
+  </data>
+
+  <!-- Invoice 2 Test Data -->
+  <data name="Invoice_URL_2" xml:space="preserve">
+    <value>https://ocrdemo.com/invoice2.png</value>
+  </data>
+  <data name="Invoice_No_2" xml:space="preserve">
+    <value>INV-67890</value>
+  </data>
+</root>
 
